--- a/sendingXML/arquivoConfig.ini
+++ b/sendingXML/arquivoConfig.ini
@@ -6,9 +6,9 @@
 
 
 [config]
-assunto: Email de Teste
+assunto: ASSUNTO DO EMAIL
 emailrecebedor: enviaemailcontabilidade@gmail.com
-corpo: texto padrao
+corpo: TESTE BRUNO
 
 
 
@@ -47,7 +47,7 @@ corpo: texto padrao
 smtp: smtp.gmail.com: 587
 
 [yahoo]
-smtp.mail.yahoo.com:587
+smtp: smtp.mail.yahoo.com:587
 
 [outlook]
 smtp: smtp.office365.com: 587
